--- a/Presentation/WebApp/wwwroot/Custom/_variables (1).scss
+++ b/Presentation/WebApp/wwwroot/Custom/_variables (1).scss
@@ -10,3 +10,6 @@ $popover-border-radius: $border-radius;
 $border-radius-lg: $border-radius;
 $border-radius-sm: $border-radius;
 $btn-border-radius-sm: $border-radius;
+$navbar-dark-hover-color: rgba($dark, .75);
+$dropdown-link-hover-bg: darken($primary, 30%);
+$dropdown-link-hover-color: white;
