--- a/Presentation/WebApp/wwwroot/Custom/custom (1).sass
+++ b/Presentation/WebApp/wwwroot/Custom/custom (1).sass
@@ -38,18 +38,31 @@
 
 // Navbar ======================================================================
 
+
+
+.navbar-dark .navbar-nav .show > .nav-link, .navbar-dark .navbar-nav .active > .nav-link, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .nav-link.active {
+    color: #fff;
+    background-color: rgba(0,0,0,.45);
+}
+
+.navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
+     color: #fff;
+   background-color: rgba(0,0,0,.45);
+}
+
+.navbar-dark .navbar-nav .nav-link {
+    color: #fff;
+     padding-left : 15px;
+          padding-right : 15px;
+   padding-top : 15px;
+   padding-bottom : 15px;
+}
+
 .navbar {
+  padding-top : 0px;
+  padding-bottom : 0px;
   border: none;
   box-shadow: 0 1px 2px rgba(0,0,0,.3);
-
-  &-brand {
-    font-size: 24px;
-  }
-
-  &-nav .nav-link {
-    padding-top: 0.9rem;
-    padding-bottom: 0.9rem;
-  }
 
   &.bg-dark,
   &.bg-primary {
