--- a/Presentation/WebApp/wwwroot/css/site.css
+++ b/Presentation/WebApp/wwwroot/css/site.css
@@ -108,3 +108,51 @@ body {
    
     border-radius: 2px;
 }
+
+
+
+/* Loader Icon Start */
+.loaderOverlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+    opacity: .75;
+    z-index: 9999;
+}
+
+.loader {
+    padding-left: 17px;
+    border: 13px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 13px solid rgb(34, 85, 130);
+    width: 90px;
+    height: 90px;
+    -webkit-animation: spin .6s linear infinite; /* Safari */
+    animation: spin .6s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+/* Loader Icon End */
